# llm-finetune

./: .gitignore  config.py  model.txt  model_llama3-chinese_v2.txt  model_llama3_1_cn_q8.txt  model_llama3_cn.txt  model_llama3_cn_q4.txt  model_llama3_cn_q5.txt  model_llama3_cn_q8.txt  pyproject.toml
data/aerospace/: 1.5m口径空间相机主镜组件的结构设计__2015__wpDb-V__49.txt  2014年世界载人航天活动盘点__2015__wpDb-V__6848.txt  3,6-二硝基吡唑[4,3-c]并吡唑（DNPP）有机双胺盐的合成及热性能__2015__wpDb-V__38.txt  30cm口径离子推力器磁场设计__2015__wpDb-V__5542.txt  3D打印火箭发动机喷嘴点火成功__2015__wpDb-V__6800.txt  ADAPTIVE RECURRENT NEURAL NETWORKS TRACKING-FILTER FOR MANEUVERING TARGET__2015__wpDb-V__2109.txt  ATR72，不止一次掉河里__2015__wpDb-V__6534.txt  Adaptive multi-sample-based photoacoustic tomography  with imaging quality optimization__2015__wpDb-V__2334.txt  Ameco全力打造公务机改装及维修能力__2015__wpDb-V__43408.txt  Application of a Keplerate type giant nanoporous isopolyoxomolybdate as a reusable catalyst for the synthesis of 1,2,4,5-tetrasubstituted imidazoles__2015__wpDb-V__12896.txt  C919,中国腾飞之翼__2015__wpDb-V__7319.txt  C919大型客机首架机机头大部段运抵中国商飞浦东基地__2015__wpDb-V__9575.txt  CAD／CAM在航空发动机研制中的应用现状及建议__2015__wpDb-V__43404.txt  CESSNA172R型飞机襟翼电门故障研究__2015__wpDb-V__3253.txt  CFM56-7B发动机高压压气机虚拟维护考核系统开发与应用__2015__wpDb-V__677.txt  C档案__2015__wpDb-V__3331.txt  C档案__2015__wpDb-V__7257.txt  DARPA拟借商业卫星“快递”军用有效载荷__2015__wpDb-V__7799.txt  DVOR4000型设备中边带调制器MOD-11OP故障解析__2015__wpDb-V__2265.txt  DZ125定向凝固高温合金在不同状态下的超高周疲劳行为研究__2015__wpDb-V__3287.txt  FIM手册在波音飞机排故中的应用__2015__wpDb-V__7296.txt  GLONASS星座在轨卫星一览表__2015__wpDb-V__2764.txt  (+423 more)
src/: config.py
xdoc/: wiki.html
(+1587 files in other folders)
