[tool.poetry]
name = "test-fineturing"
version = "0.1.0"
description = "test embedding and llama3"
authors = ["chenqi"]

[tool.poetry.dependencies]
python = "3.11.9"
tqdm = "^4.66.5"

# https://python-poetry.org/docs/repositories/
llama-index = "^0.11.2"
pandas = "^2.2.2"
modelscope = "^1.17.1"
[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"