[tool.poetry]
name = "test-fineturing"
version = "0.1.0"
description = "test embedding and llama3"
authors = ["chenqi"]

[tool.poetry.dependencies]
python = "3.11.9"
tqdm = "^4.66.5"
llama-index = "^0.11.2"
llama-index-finetuning = "^0.2.0"
llama-index-embeddings-huggingface = "^0.3.1"
pandas = "^2.2.2"
modelscope = "^1.17.1"
python-dotenv = "^1.0.1"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"
